refactor: fix bugs due to implementation new services