@@ -1,16 +1,15 @@
-package kg.edu.mathbilim.service.impl.reference;
+package kg.edu.mathbilim.service.impl.reference.role;
 
 import kg.edu.mathbilim.dto.reference.RoleDto;
 import kg.edu.mathbilim.exception.nsee.RoleNotFoundException;
 import kg.edu.mathbilim.mapper.reference.RoleMapper;
 import kg.edu.mathbilim.model.reference.Role;
-import kg.edu.mathbilim.repository.reference.RoleRepository;
-import kg.edu.mathbilim.service.interfaces.reference.RoleService;
+import kg.edu.mathbilim.repository.reference.role.RoleRepository;
+import kg.edu.mathbilim.service.interfaces.reference.role.RoleService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,6 +27,6 @@ public class RoleServiceImpl implements RoleService {
     @Override
     public List<RoleDto> getAllRoles() {
         List<Role> roles = roleRepository.findAll();
-        return roles.stream().map(roleMapper::toDto).collect(Collectors.toList());
+        return roles.stream().map(roleMapper::toDto).toList();
     }
 }
